intel/bench_214_new/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main/log.txt
bench_214_new/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main.c:13:12: error: default initialization of an object of const type 'const int'
 int const ROW_SHIFT ; 
           ^
                     = 0
bench_214_new/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main/extr_.FFmpeglibavcodecxvididct.c_idct_row_with_main.c:101:20: error: default initialization of an object of const type 'const int *const'
  const int *const tab;
                   ^
                       = nullptr
2 errors generated.
HLS FPGA Parse FAILED.
